RESOLVED FIXED48573
Include stddef.h unconditionally in Assertions.h
https://bugs.webkit.org/show_bug.cgi?id=48573
Summary Include stddef.h unconditionally in Assertions.h
Kwang Yul Seo
Reported 2010-10-28 16:13:16 PDT
Because OBJECT_OFFSETOF macro in StdLibExtras.h uses ptrdiff_t, we must include stddef.h. <wtf/Assertions.h> indirectly includes stddef.h in many ports, but this is not true for Brew MP port.
Attachments
Patch (1.16 KB, patch)
2010-10-28 16:21 PDT, Kwang Yul Seo
no flags
Patch (974 bytes, patch)
2010-10-28 16:48 PDT, Kwang Yul Seo
no flags
Kwang Yul Seo
Comment 1 2010-10-28 16:21:33 PDT
Darin Adler
Comment 2 2010-10-28 16:27:06 PDT
Comment on attachment 72253 [details] Patch I think a better fix would be to change Assertions.h to include <stddef.h> unconditionally. I don’t see any reason to have that include be MSVC-only.
Kwang Yul Seo
Comment 3 2010-10-28 16:48:01 PDT
WebKit Commit Bot
Comment 4 2010-10-28 17:43:55 PDT
Comment on attachment 72258 [details] Patch Clearing flags on attachment: 72258 Committed r70829: <http://trac.webkit.org/changeset/70829>
WebKit Commit Bot
Comment 5 2010-10-28 17:44:00 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.