2010-10-28  Kwang Yul Seo  <skyul@company100.net>

Reviewed by Darin Adler.

        Include stddef.h unconditionally in Assertions.h
        https://bugs.webkit.org/show_bug.cgi?id=48573

        There is no reason to have stddef.h include be MSVC-only.

        * wtf/Assertions.h:

git-svn-id: svn://svn.chromium.org/blink/trunk@70829 bbb929c8-8fbe-4397-9dbb-9b2b20218538