third_party/WebKit/JavaScriptCore/wtf/Assertions.h
@@ -45,9 +45,9 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 #include "Platform.h"
 
-#if COMPILER(MSVC)
 #include <stddef.h>
-#else
+
+#if !COMPILER(MSVC)
 #include <inttypes.h>
 #endif
 
